--- a/Depo/Depo/Business/Services/PhotoEdit/PhotoEditViewController.xib
+++ b/Depo/Depo/Business/Services/PhotoEdit/PhotoEditViewController.xib
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PhotoEditViewController" customModule="Billo" customModuleProvider="target">
             <connections>
-                <outlet property="bottomBarContainer" destination="BUf-nW-9bz" id="KUL-8e-kYx"/>
-                <outlet property="bottomSafeAreaView" destination="U8f-ha-09S" id="IoR-y1-FQI"/>
-                <outlet property="filtersContainerView" destination="PiM-mg-5MO" id="zHD-BW-8dn"/>
-                <outlet property="filtersScrollView" destination="bBm-Ct-o7t" id="45Q-wy-f6i"/>
-                <outlet property="navBarContainer" destination="6eJ-04-lW6" id="bLh-B3-Vh2"/>
+                <outlet property="uiManager" destination="Lja-hd-hHM" id="2J9-mb-CPI"/>
                 <outlet property="view" destination="iN0-l3-epB" id="K8c-jt-Bfv"/>
             </connections>
         </placeholder>
@@ -23,11 +19,37 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U8f-ha-09S">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vF2-K7-Bb3" userLabel="Image Content View">
+                    <rect key="frame" x="0.0" y="88" width="414" height="730"/>
+                    <subviews>
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SgF-7J-zsa">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="730"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JgM-2j-sZi">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="730"/>
+                                </imageView>
+                            </subviews>
+                        </scrollView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="SgF-7J-zsa" secondAttribute="bottom" id="BmB-hs-Xrb"/>
+                        <constraint firstItem="JgM-2j-sZi" firstAttribute="top" secondItem="vF2-K7-Bb3" secondAttribute="top" id="C4f-sO-e0b"/>
+                        <constraint firstAttribute="bottom" secondItem="JgM-2j-sZi" secondAttribute="bottom" id="Ggx-Qb-T7F"/>
+                        <constraint firstItem="SgF-7J-zsa" firstAttribute="leading" secondItem="vF2-K7-Bb3" secondAttribute="leading" id="I9y-4W-Pv4"/>
+                        <constraint firstAttribute="trailing" secondItem="JgM-2j-sZi" secondAttribute="trailing" id="M0H-Qf-Hwh"/>
+                        <constraint firstItem="JgM-2j-sZi" firstAttribute="width" secondItem="vF2-K7-Bb3" secondAttribute="width" multiplier="1:1" id="bRU-Ud-aSO"/>
+                        <constraint firstItem="JgM-2j-sZi" firstAttribute="leading" secondItem="vF2-K7-Bb3" secondAttribute="leading" id="hfe-4k-6bt"/>
+                        <constraint firstAttribute="trailing" secondItem="SgF-7J-zsa" secondAttribute="trailing" id="lty-gZ-cm9"/>
+                        <constraint firstItem="SgF-7J-zsa" firstAttribute="top" secondItem="vF2-K7-Bb3" secondAttribute="top" id="n25-gt-Tpo"/>
+                        <constraint firstItem="JgM-2j-sZi" firstAttribute="height" secondItem="vF2-K7-Bb3" secondAttribute="height" multiplier="1:1" id="tqJ-mv-sQ8"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U8f-ha-09S" userLabel="Bottom Safe Area View">
                     <rect key="frame" x="0.0" y="862" width="414" height="34"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6eJ-04-lW6">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6eJ-04-lW6" userLabel="Navbar Container">
                     <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
@@ -65,7 +87,7 @@
                         <constraint firstAttribute="bottom" secondItem="bBm-Ct-o7t" secondAttribute="bottom" id="vmd-DC-68F"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BUf-nW-9bz">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BUf-nW-9bz" userLabel="Bottom Bar Container">
                     <rect key="frame" x="0.0" y="818" width="414" height="44"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
@@ -75,16 +97,20 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
+                <constraint firstItem="vF2-K7-Bb3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="1rS-tI-cUa"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="U8f-ha-09S" secondAttribute="trailing" id="2kb-Pw-X7w"/>
                 <constraint firstItem="BUf-nW-9bz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="3lh-Ta-LMJ"/>
                 <constraint firstAttribute="bottom" secondItem="U8f-ha-09S" secondAttribute="bottom" id="KkN-gX-tfD"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="nFk-JH-Rpa" secondAttribute="trailing" id="Lqm-wV-pZm"/>
                 <constraint firstItem="U8f-ha-09S" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="ODD-4j-njp"/>
+                <constraint firstItem="BUf-nW-9bz" firstAttribute="top" secondItem="vF2-K7-Bb3" secondAttribute="bottom" id="Qtx-g4-uF7"/>
                 <constraint firstItem="BUf-nW-9bz" firstAttribute="top" secondItem="nFk-JH-Rpa" secondAttribute="bottom" id="Taf-h1-9XD"/>
+                <constraint firstItem="vF2-K7-Bb3" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Tgb-nk-F3z"/>
                 <constraint firstItem="nFk-JH-Rpa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="VlH-gV-alA"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="6eJ-04-lW6" secondAttribute="trailing" id="ajg-OA-4V3"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="BUf-nW-9bz" secondAttribute="bottom" id="avk-7L-lpu"/>
                 <constraint firstItem="U8f-ha-09S" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="eY9-EN-LaD"/>
+                <constraint firstItem="vF2-K7-Bb3" firstAttribute="top" secondItem="6eJ-04-lW6" secondAttribute="bottom" id="saJ-mm-WJC"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="BUf-nW-9bz" secondAttribute="trailing" id="uCb-zo-rfO"/>
                 <constraint firstItem="6eJ-04-lW6" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="vQ0-oZ-1Xk"/>
                 <constraint firstItem="6eJ-04-lW6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="yBR-aj-pFZ"/>
@@ -92,5 +118,17 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="137.68115942028987" y="152.67857142857142"/>
         </view>
+        <customObject id="Lja-hd-hHM" customClass="PhotoEditViewUIManager" customModule="Billo" customModuleProvider="target">
+            <connections>
+                <outlet property="bottomBarContainer" destination="BUf-nW-9bz" id="x13-xc-CMW"/>
+                <outlet property="bottomSafeAreaView" destination="U8f-ha-09S" id="JBh-z0-ZEf"/>
+                <outlet property="contentImageVIew" destination="vF2-K7-Bb3" id="2Sn-FZ-Lui"/>
+                <outlet property="filtersContainerView" destination="PiM-mg-5MO" id="bZE-P4-vmk"/>
+                <outlet property="filtersScrollView" destination="bBm-Ct-o7t" id="Fgr-d7-MNR"/>
+                <outlet property="imageScrollView" destination="SgF-7J-zsa" id="ojY-EP-qxA"/>
+                <outlet property="imageView" destination="JgM-2j-sZi" id="xlv-eU-TAA"/>
+                <outlet property="navBarContainer" destination="6eJ-04-lW6" id="LHl-Lq-Vph"/>
+            </connections>
+        </customObject>
     </objects>
 </document>
