--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/FilterViews/AdjustFilterView/AdjustFilterView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/FilterViews/AdjustFilterView/AdjustFilterView.xib
@@ -27,7 +27,7 @@
                                 <action selector="onLeftButtonTapped:" destination="iz6-KA-1la" eventType="touchUpInside" id="s1z-bS-yTi"/>
                             </connections>
                         </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2CC-JB-AkH">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2CC-JB-AkH" customClass="AdjustmentParameterSliderView" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="54" y="0.0" width="306" height="100"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mvn-X4-JpP">
@@ -73,6 +73,9 @@
                                 <constraint firstAttribute="bottom" secondItem="mvn-X4-JpP" secondAttribute="bottom" id="nw9-6Y-8M2"/>
                                 <constraint firstItem="mvn-X4-JpP" firstAttribute="top" secondItem="JFD-qw-fEd" secondAttribute="bottom" id="v2g-J7-SQY"/>
                             </constraints>
+                            <connections>
+                                <outlet property="sliderContentView" destination="mvn-X4-JpP" id="rre-6b-kRQ"/>
+                            </connections>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CrV-2P-1R7">
                             <rect key="frame" x="370" y="0.0" width="44" height="100"/>
@@ -103,7 +106,7 @@
                 <outlet property="maxValueLabel" destination="N0W-dc-sO7" id="YzY-VQ-J5y"/>
                 <outlet property="minValueLabel" destination="JFD-qw-fEd" id="i8H-Fq-dVF"/>
                 <outlet property="rightButton" destination="CrV-2P-1R7" id="keO-d4-aAf"/>
-                <outlet property="sliderContentView" destination="mvn-X4-JpP" id="5c9-5C-XDM"/>
+                <outlet property="sliderView" destination="2CC-JB-AkH" id="5uK-5r-dCo"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="141.29464285714286"/>
         </view>
