--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AlbumCard/AlbumCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AlbumCard/AlbumCard.xib
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AlbumCard" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AlbumCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="469"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -83,7 +80,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YGs-5l-TOq">
                             <rect key="frame" x="1" y="1" width="302" height="302"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bJ-os-ke5" customClass="LoadingImageView" customModule="lifebox" customModuleProvider="target">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bJ-os-ke5" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="302" height="302"/>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nux-hs-zyp">
@@ -117,16 +114,27 @@
                         <constraint firstAttribute="trailing" secondItem="YGs-5l-TOq" secondAttribute="trailing" constant="1" id="vzg-65-Ydr"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LCC-iL-AFk">
+                    <rect key="frame" x="217" y="432" width="46" height="30"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="shareButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="hMf-Us-07l"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="lgC-zx-PRf" secondAttribute="trailing" constant="8" id="1Xi-7B-YqL"/>
                 <constraint firstAttribute="trailing" secondItem="H1a-JQ-4mn" secondAttribute="trailing" id="2VY-yF-84P"/>
+                <constraint firstItem="LCC-iL-AFk" firstAttribute="width" secondItem="aLQ-gs-aeI" secondAttribute="width" id="4zu-VI-nLg"/>
                 <constraint firstItem="aLQ-gs-aeI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="6ni-OP-LV4"/>
                 <constraint firstItem="sQM-Sv-G0F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="A6u-ah-k8l"/>
                 <constraint firstItem="z0x-Iu-F9r" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="AlD-d5-XXt"/>
+                <constraint firstItem="LCC-iL-AFk" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="1.5" id="CIm-Lk-qMg"/>
+                <constraint firstItem="LCC-iL-AFk" firstAttribute="height" secondItem="aLQ-gs-aeI" secondAttribute="height" multiplier="0.681818" id="Ft5-BV-wkN"/>
                 <constraint firstItem="H1a-JQ-4mn" firstAttribute="leading" secondItem="z0x-Iu-F9r" secondAttribute="trailing" constant="15" id="HMB-9u-ZMV"/>
                 <constraint firstItem="UWR-Oz-VT8" firstAttribute="top" secondItem="lgC-zx-PRf" secondAttribute="bottom" constant="14" id="KVg-xQ-bhk"/>
+                <constraint firstItem="LCC-iL-AFk" firstAttribute="centerY" secondItem="aLQ-gs-aeI" secondAttribute="centerY" id="PGN-1l-Pfb"/>
                 <constraint firstItem="lgC-zx-PRf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="UDM-Wl-LAD"/>
                 <constraint firstItem="p3Y-Zc-uCl" firstAttribute="top" secondItem="sQM-Sv-G0F" secondAttribute="bottom" constant="10" id="YKg-Gz-UiC"/>
                 <constraint firstItem="UWR-Oz-VT8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YZT-3G-mzu"/>
@@ -145,6 +153,7 @@
                 <outlet property="bottomButton" destination="aLQ-gs-aeI" id="QVq-Aq-brM"/>
                 <outlet property="descriptionLabel" destination="p3Y-Zc-uCl" id="XMV-rA-G0y"/>
                 <outlet property="previewImageView" destination="8bJ-os-ke5" id="2Or-Dz-D1R"/>
+                <outlet property="shareButton" destination="LCC-iL-AFk" id="Fpc-cX-X17"/>
                 <outlet property="subTitleLabel" destination="sQM-Sv-G0F" id="OUZ-Gc-ZX6"/>
                 <outlet property="titleLabel" destination="z0x-Iu-F9r" id="OEv-8t-dYp"/>
             </connections>
