--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/MovieCard/MovieCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/MovieCard/MovieCard.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MovieCard" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MovieCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -36,7 +34,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azH-1I-wjv">
                     <rect key="frame" x="14" y="79" width="347" height="147"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toG-9U-cR8" customClass="LoadingImageView" customModule="lifebox" customModuleProvider="target">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="toG-9U-cR8" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="347" height="147"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W4n-ms-xHG">
@@ -109,16 +107,27 @@
                         <action selector="actionBottomButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="aoz-mp-HUO"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ksf-kX-8de">
+                    <rect key="frame" x="258.5" y="253" width="46" height="30"/>
+                    <state key="normal" title="Button"/>
+                    <connections>
+                        <action selector="shareButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="zmh-Bv-FYT"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="azH-1I-wjv" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="0zn-wQ-dlJ"/>
                 <constraint firstAttribute="trailing" secondItem="DLi-Pt-MfC" secondAttribute="trailing" constant="15" id="1LD-48-fKx"/>
+                <constraint firstItem="ksf-kX-8de" firstAttribute="width" secondItem="rlz-xc-VD9" secondAttribute="width" id="DiX-3W-Z9V"/>
                 <constraint firstItem="VnS-FV-3Q3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="FLS-Dd-hgU"/>
                 <constraint firstItem="VnS-FV-3Q3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Frz-GX-WIh" secondAttribute="trailing" constant="15" id="JCU-kt-jua"/>
+                <constraint firstItem="ksf-kX-8de" firstAttribute="centerY" secondItem="rlz-xc-VD9" secondAttribute="centerY" id="NmF-BY-2i8"/>
                 <constraint firstItem="Frz-GX-WIh" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="OYp-yI-nnV"/>
+                <constraint firstItem="ksf-kX-8de" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="1.5" id="PbT-Hr-iJk"/>
                 <constraint firstItem="rlz-xc-VD9" firstAttribute="top" secondItem="79I-Lx-Apf" secondAttribute="bottom" id="TP7-Gw-z0n"/>
                 <constraint firstItem="azH-1I-wjv" firstAttribute="top" secondItem="DLi-Pt-MfC" secondAttribute="bottom" constant="7" id="VTO-U8-5Km"/>
+                <constraint firstItem="ksf-kX-8de" firstAttribute="height" secondItem="rlz-xc-VD9" secondAttribute="height" multiplier="0.681818" id="cGS-ey-zK3"/>
                 <constraint firstItem="rlz-xc-VD9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="cp4-gJ-lYy"/>
                 <constraint firstItem="Frz-GX-WIh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="mk5-gZ-zUu"/>
                 <constraint firstAttribute="trailing" secondItem="VnS-FV-3Q3" secondAttribute="trailing" id="mq2-qq-6dW"/>
@@ -133,6 +142,7 @@
             <connections>
                 <outlet property="bottomButton" destination="rlz-xc-VD9" id="rHY-NK-EVH"/>
                 <outlet property="durationLabel" destination="hoW-dS-VOq" id="rTm-GO-X4e"/>
+                <outlet property="shareButton" destination="ksf-kX-8de" id="fqD-rw-jR4"/>
                 <outlet property="subTitleLabel" destination="DLi-Pt-MfC" id="KJC-1c-OZZ"/>
                 <outlet property="titleLabel" destination="Frz-GX-WIh" id="mx3-Yh-OrI"/>
                 <outlet property="videoPreviewImageView" destination="toG-9U-cR8" id="DVd-Cp-up4"/>
