--- a/Depo/Depo/Presentation/UserStories/Grid/LBAlbumLikePreviewSlider/View/LBAlbumLikePreviewSliderViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/LBAlbumLikePreviewSlider/View/LBAlbumLikePreviewSliderViewController.xib
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LBAlbumLikePreviewSliderViewController" customModule="lifebox" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LBAlbumLikePreviewSliderViewController" customModule="Billo" customModuleProvider="target">
             <connections>
                 <outlet property="collectionView" destination="Lsf-tT-Cem" id="iZk-jp-ue8"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Axe-KV-JPN"/>
@@ -21,7 +19,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Lsf-tT-Cem">
-                    <rect key="frame" x="10" y="0.0" width="408" height="128"/>
+                    <rect key="frame" x="0.0" y="0.0" width="428" height="128"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="MHc-Oz-ERZ">
                         <size key="itemSize" width="50" height="50"/>
@@ -33,9 +31,9 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Lsf-tT-Cem" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="BWY-qp-Idi"/>
+                <constraint firstItem="Lsf-tT-Cem" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="BWY-qp-Idi"/>
                 <constraint firstItem="Lsf-tT-Cem" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="al7-Gc-uJ6"/>
-                <constraint firstAttribute="trailing" secondItem="Lsf-tT-Cem" secondAttribute="trailing" constant="10" id="k86-4Z-iWA"/>
+                <constraint firstAttribute="trailing" secondItem="Lsf-tT-Cem" secondAttribute="trailing" id="k86-4Z-iWA"/>
                 <constraint firstAttribute="bottom" secondItem="Lsf-tT-Cem" secondAttribute="bottom" id="xbE-Zy-18g"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
