--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFilterCell.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFilterCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,7 +24,19 @@
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASw-qu-qdg">
                                 <rect key="frame" x="0.0" y="0.0" width="80" height="90"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list.bullet" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="j9u-rw-LPI">
+                                        <rect key="frame" x="0.0" y="2.5" width="80" height="84.5"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="j9u-rw-LPI" secondAttribute="bottom" id="1kO-nz-H4r"/>
+                                    <constraint firstItem="j9u-rw-LPI" firstAttribute="leading" secondItem="ASw-qu-qdg" secondAttribute="leading" id="F11-am-02q"/>
+                                    <constraint firstAttribute="trailing" secondItem="j9u-rw-LPI" secondAttribute="trailing" id="qYo-Jk-QVt"/>
+                                    <constraint firstItem="j9u-rw-LPI" firstAttribute="top" secondItem="ASw-qu-qdg" secondAttribute="top" id="tgg-Bl-9hx"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -58,9 +69,9 @@
                 <constraint firstItem="YQA-7I-Pju" firstAttribute="top" secondItem="PF7-8N-ywW" secondAttribute="bottom" constant="2" id="tBp-zh-0ju"/>
                 <constraint firstAttribute="trailing" secondItem="YQA-7I-Pju" secondAttribute="trailing" id="x0u-0E-tJt"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="133" height="127"/>
             <connections>
+                <outlet property="adjustmentImageView" destination="j9u-rw-LPI" id="fHY-Kx-Caa"/>
                 <outlet property="adjustmentView" destination="ASw-qu-qdg" id="tE3-uV-IWU"/>
                 <outlet property="imageContentView" destination="PF7-8N-ywW" id="WAf-Xv-aUj"/>
                 <outlet property="imageView" destination="f6o-bn-nr8" id="cFZ-w1-5Dg"/>
@@ -69,4 +80,7 @@
             <point key="canvasLocation" x="197.82608695652175" y="178.45982142857142"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="list.bullet" catalog="system" width="128" height="88"/>
+    </resources>
 </document>
