--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFiltersView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Filters/PreparedFiltersView/PreparedFiltersView.xib
@@ -11,51 +11,59 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="9Jo-9E-ac8" customClass="PreparedFiltersView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yZ-v4-yCR">
-                    <rect key="frame" x="4" y="0.0" width="407" height="50"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VYD-bh-W9S">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ad5-hl-VAW">
-                            <rect key="frame" x="0.0" y="0.0" width="407" height="50"/>
+                        <scrollView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yZ-v4-yCR">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ad5-hl-VAW">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="50" id="QAB-ck-y1c"/>
+                                    </constraints>
+                                </stackView>
+                            </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" constant="50" id="QAB-ck-y1c"/>
+                                <constraint firstItem="ad5-hl-VAW" firstAttribute="top" secondItem="6yZ-v4-yCR" secondAttribute="top" id="0AE-Dx-cGy"/>
+                                <constraint firstItem="ad5-hl-VAW" firstAttribute="leading" secondItem="6yZ-v4-yCR" secondAttribute="leading" id="YQs-YP-J4s"/>
+                                <constraint firstAttribute="trailing" secondItem="ad5-hl-VAW" secondAttribute="trailing" id="dur-VX-otW"/>
+                                <constraint firstAttribute="height" id="fFc-HA-tKw"/>
+                                <constraint firstAttribute="bottom" secondItem="ad5-hl-VAW" secondAttribute="bottom" id="qYw-8m-rj0"/>
                             </constraints>
-                        </stackView>
+                        </scrollView>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AfL-6u-F5o">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="120" id="5LR-il-XcB"/>
+                            </constraints>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OvH-rT-qtk">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="ad5-hl-VAW" firstAttribute="top" secondItem="6yZ-v4-yCR" secondAttribute="top" id="CQQ-DR-N67"/>
-                        <constraint firstItem="ad5-hl-VAW" firstAttribute="leading" secondItem="6yZ-v4-yCR" secondAttribute="leading" id="dVP-Lq-yWe"/>
-                        <constraint firstAttribute="height" constant="50" id="fFc-HA-tKw"/>
-                        <constraint firstAttribute="trailing" secondItem="ad5-hl-VAW" secondAttribute="trailing" id="kQm-Te-nxi"/>
-                        <constraint firstAttribute="bottom" secondItem="ad5-hl-VAW" secondAttribute="bottom" id="xVj-iG-Uci"/>
+                        <constraint firstAttribute="bottom" secondItem="AfL-6u-F5o" secondAttribute="bottom" id="Px6-57-2J3"/>
+                        <constraint firstItem="AfL-6u-F5o" firstAttribute="leading" secondItem="VYD-bh-W9S" secondAttribute="leading" id="aG4-6r-5zw"/>
+                        <constraint firstAttribute="trailing" secondItem="AfL-6u-F5o" secondAttribute="trailing" id="fZj-N5-oK1"/>
+                        <constraint firstItem="ad5-hl-VAW" firstAttribute="width" relation="lessThanOrEqual" secondItem="VYD-bh-W9S" secondAttribute="width" id="j4y-eg-xZI"/>
+                        <constraint firstItem="AfL-6u-F5o" firstAttribute="top" secondItem="6yZ-v4-yCR" secondAttribute="bottom" id="sxK-zk-DeF"/>
                     </constraints>
-                </scrollView>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="AfL-6u-F5o">
-                    <rect key="frame" x="0.0" y="50" width="414" height="120"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="120" id="5LR-il-XcB"/>
-                    </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OvH-rT-qtk">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
+                </stackView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="AfL-6u-F5o" firstAttribute="top" secondItem="6yZ-v4-yCR" secondAttribute="bottom" id="1bj-qm-1mz"/>
-                <constraint firstAttribute="trailing" secondItem="6yZ-v4-yCR" secondAttribute="trailing" constant="8" id="ARX-HU-81j"/>
-                <constraint firstItem="AfL-6u-F5o" firstAttribute="bottom" secondItem="9Jo-9E-ac8" secondAttribute="bottom" id="J9g-r9-O8L"/>
-                <constraint firstItem="6yZ-v4-yCR" firstAttribute="leading" secondItem="9Jo-9E-ac8" secondAttribute="leading" constant="8" id="Kr8-hq-TgN"/>
-                <constraint firstItem="Ock-Vu-diZ" firstAttribute="trailing" secondItem="AfL-6u-F5o" secondAttribute="trailing" id="UmA-YJ-ksD"/>
-                <constraint firstItem="AfL-6u-F5o" firstAttribute="width" secondItem="9Jo-9E-ac8" secondAttribute="width" id="puf-bN-cx7"/>
-                <constraint firstItem="6yZ-v4-yCR" firstAttribute="top" secondItem="9Jo-9E-ac8" secondAttribute="top" id="s47-2f-9Vc"/>
-                <constraint firstItem="AfL-6u-F5o" firstAttribute="leading" secondItem="Ock-Vu-diZ" secondAttribute="leading" id="wa6-Cf-KMb"/>
+                <constraint firstItem="VYD-bh-W9S" firstAttribute="leading" secondItem="Ock-Vu-diZ" secondAttribute="leading" id="2fb-Ck-pBK"/>
+                <constraint firstItem="VYD-bh-W9S" firstAttribute="top" secondItem="9Jo-9E-ac8" secondAttribute="top" id="gXq-6k-Apt"/>
+                <constraint firstItem="VYD-bh-W9S" firstAttribute="bottom" secondItem="Ock-Vu-diZ" secondAttribute="bottom" id="jTX-jG-77H"/>
+                <constraint firstAttribute="trailing" secondItem="VYD-bh-W9S" secondAttribute="trailing" id="zeh-Jg-OSz"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Ock-Vu-diZ"/>
