--- a/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/HSLView/HSLView.xib
+++ b/Depo/Depo/Presentation/SubViews/PhotoEditViews/Adjustments/AdjustmentViews/HSLView/HSLView.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="mpr-F4-0ZU" customClass="HLSView" customModule="Billo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="mpr-F4-0ZU" customClass="HSLView" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
